Fix: Address test environment issues and update dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    // TypeScript strict mode enabled for improved type safety
+    "strict": true
   },
   "exclude": [".docusaurus", "build", "tailwind.config.mjs"]
 }
