--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
