--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,18 @@
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2022,
+    "sourceType": "module",
+    "project": "./tsconfig.json"
+  },
   "plugins": ["@typescript-eslint"],
   "root": true,
+  "env": {
+    "browser": true,
+    "es2022": true,
+    "node": true
+  },
   "rules": {
     "@typescript-eslint/no-unused-vars": [
       "error",
