--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:coverage": "vitest --coverage",
     "test:e2e": "playwright test",
     "test:visual": "playwright test --project=visual",
-    "test:fumadocs": "playwright test tests/e2e/fumadocs",
+    "test:fumadocs": "playwright test tests/e2e/fumadocs --grep '.*\\.(spec|e2e)\\.ts'",
     "test:perf": "playwright test --project=performance-desktop",
     "test:parallel": "./scripts/parallel-test-runner.sh",
     "type-check": "tsc --noEmit",
