--- a/package.json
+++ b/package.json
@@ -32,16 +32,20 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@supabase/supabase-js": "^2.50.4",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.47.3",
     "@tanstack/react-table": "^8.21.3",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.16.0",
     "fumadocs-core": "^15.6.1",
     "fumadocs-mdx": "^11.6.10",
     "fumadocs-ui": "^15.6.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-mdx-remote": "^5.0.0",
@@ -54,24 +58,23 @@
     "sharp": "^0.33.5",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.72",
-    "@supabase/supabase-js": "^2.47.3",
-    "@supabase/ssr": "^0.5.2",
-    "@upstash/ratelimit": "^2.0.5",
-    "@upstash/redis": "^1.35.1",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^11.16.0",
-    "js-cookie": "^3.0.5"
+    "zod": "^3.25.72"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
+    "@netlify/functions": "^2.8.0",
     "@netlify/plugin-nextjs": "^5.11.4",
+    "@playwright/test": "^1.50.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/glob": "^8.1.0",
     "@types/jest-axe": "^3.5.9",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/pixelmatch": "^5.2.6",
+    "@types/pngjs": "^6.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
@@ -82,21 +85,17 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "15.3.5",
     "eslint-config-prettier": "^9.1.0",
+    "glob": "^11.0.3",
     "jest-axe": "^10.0.0",
     "jsdom": "^24.1.0",
+    "pixelmatch": "^5.3.0",
+    "playwright": "^1.50.1",
+    "pngjs": "^7.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.3.2",
     "tailwindcss": "^4.0.0",
     "task-master-ai": "^0.19.0",
     "typescript": "^5",
-    "vitest": "^2.0.0",
-    "@netlify/functions": "^2.8.0",
-    "@playwright/test": "^1.50.1",
-    "playwright": "^1.50.1",
-    "@types/pixelmatch": "^5.2.6",
-    "@types/pngjs": "^6.0.5",
-    "pixelmatch": "^5.3.0",
-    "pngjs": "^7.0.0",
-    "@types/js-cookie": "^3.0.6"
+    "vitest": "^2.0.0"
   }
 }
