--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:visual": "playwright test --project=visual",
     "test:fumadocs": "playwright test tests/e2e/fumadocs --grep '.*\\.(spec|e2e)\\.ts'",
     "test:perf": "playwright test --project=performance-desktop",
+    "test:performance:ci": "playwright test --project=performance-desktop --reporter=list",
     "test:parallel": "./scripts/parallel-test-runner.sh",
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@niivue/niivue": "^0.61.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -34,6 +36,7 @@
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
@@ -56,10 +59,13 @@
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "sharp": "^0.34.3",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
